--- a/glade/part4_tree.glade
+++ b/glade/part4_tree.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkTreeStore" id="treeStore">
@@ -12,7 +12,8 @@
   </object>
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
-    <child>
+    <property name="resizable">False</property>
+    <child type="titlebar">
       <placeholder/>
     </child>
     <child>
